#### v0.4.8 - 2014/08/xx
* Added user authorization.


#### v0.4.8 - 2014/08/28
* surf.NewBrowser() no longer returns an error.
* Added jar.NewMemoryCookies() method.
* Added jar.NewMemoryHeaders() method.
* Moved default attributes into surf package.


#### v0.4.7 - 2014/08/28
* Created type Stylesheet.
* Created type Script.
* Normalized asset URLs (src, href) to always use URL.
* Added DownloadAsync() methods.


#### v0.4.6 - 2014/08/27
* Broke up the packages to be more organized.
* Created jar.FileBookmarks for saving bookmarks to a file.
* Removed unittest package. Now at github.com/headzoo/ut.


#### v0.4.5 - 2014/08/27
* Created type Downloadable.
* Renamed Browser.Write() to Browser.Download().
* Created type Image.
* Added Browser.Images() method.
* Removed generated docs. API docs are viewable from godoc.org.


#### v0.4.4 - 2014/08/25
* Renamed Browser.FollowLink() to Click().
* Renamed Browser.Get() to Open().
* Renamed Browser.GetForm() to OpenForm().
* Renamed Browser.GetBookmark() to OpenBookmark().
* Moved attributes to their own package.
* Renamed Query() methods to Dom().
* Renamed jars package to jar.
* Added the Browser.Write() method.