@@ -1,5 +1,6 @@
 #### v0.4.8 - 2014/08/xx
 * Added user authorization.
+* Added event system.
 
 
 #### v0.4.8 - 2014/08/28
